--- a/src/App.css
+++ b/src/App.css
@@ -17,4 +17,21 @@ html,
   justify-content: center;
   align-items: center;
   text-align: center;
+  background: #444;
+}
+
+#drop-message {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#model-stats {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  pointer-events: none;
+  z-index: 10;
+  color: white;
 }
