--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body,
 html,
 #root {
@@ -30,11 +34,22 @@ html,
 }
 
 @keyframes vibrate {
-  0%, 100% { transform: translateX(0); }
-  20% { transform: translateY(-3px); }
-  40% { transform: translateY(4px); }
-  60% { transform: translateY(-1px); }
-  80% { transform: translateY(5px); }
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+  20% {
+    transform: translateY(-3px);
+  }
+  40% {
+    transform: translateY(4px);
+  }
+  60% {
+    transform: translateY(-1px);
+  }
+  80% {
+    transform: translateY(5px);
+  }
 }
 
 .vibrate-text {
