Improve model reveal sequence.
Simplify CSS.

Avoid re-renders.

Reveal grid in a simple way.

Reveal from center outwards.

Make a bit of progress on clipping-plane reveal.

Show modified scene when spring starts.

Get rid of unnecessary code.

Tiny refactor.

Reveal from the bottom to the top.

Delete axesHelper.

Small improvements to sequence.

Tiny refactor.

More tiny refactor.

Add explanatory comments.

Add a few more comments.

Add important optimization.

Cache model dimensions too.

Hide fallback text last.

Don't traverse the scene multiple times.

--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,7 @@
   }
 
   #model-view {
+    position: relative;
     width: 100%;
     height: 100%;
     display: flex;
@@ -105,6 +106,7 @@
   }
 
   #model-view-fallback {
+    position: absolute;
     color: white;
     font-family:
       ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
@@ -112,6 +114,7 @@
     font-size: 0.75rem;
     line-height: 1rem;
     white-space: nowrap;
+    pointer-events: none;
   }
 
   #texture-view-container {
